packages/frontend/src/components/VisualizationConfigs/BigNumberConfig/LabelEditor.module.css
.editorWrapper {
    overflow: hidden;
    padding-top: 8px;

    @mixin light {
        border-color: var(--mantine-color-ldGray-2);
    }
    @mixin dark {
        border-color: var(--mantine-color-ldDark-4);
    }
}

.editorWrapperReadOnly {
    border-color: transparent;
    opacity: 0.6;

    @mixin light {
        background-color: var(--mantine-color-ldGray-1);
    }
    @mixin dark {
        background-color: var(--mantine-color-ldDark-5);
    }
}

.editorWrapper :global(.monaco-editor) {
    overflow: hidden;
    padding: 0 8px;
}

.editorWrapper :global(#label-editor .view-lines.monaco-mouse-cursor-text) {
    border: none !important;
}

.editorWrapper :global(.monaco-scrollable-element > .scrollbar) {
    width: 6px !important;
}

.placeholderText {
    pointer-events: none;
    top: 50%;
    transform: translateY(-50%);
}

